Still sorta a WIP
Add requirements.txt
Update docker compose
Use python image for docker, and pipenv for dependencies
Add venv to gitignore for running outside of docker
Add uptime uri to script
Rebuild to a class component because I missed writing python
Make more presentable inside of home assistant
Grab more values from inverter
Use logger
Programmatically get what sensors to get and publish instead (modify self.sensors)
Ignore total power if it's broken
Add exponential backoff for it inverter not available
Add temperature to publish data
Probably a whole bunch of other stuff that I forgot about in the last few hours of doing this

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,13 +1,14 @@
 global:
-    measure_interv_mins: 10
+    interval_seconds: 60
+    uptime_uri: ""
 
 inverter:
-    ip: "TODO"
-    username: "TODO"
-    password: "TODO"
+    ip: ""
+    username: ""
+    password: ""
 
 mqtt:
-    broker: TODO
-    username: "TODO"
-    password: "TODO"
+    broker: ""
+    username: ""
+    password: ""
 
